trying to enable position: fixed on mobile browser

--- a/public/css/bootstrap-responsive.css
+++ b/public/css/bootstrap-responsive.css
@@ -685,7 +685,7 @@
   }
   .navbar-fixed-top,
   .navbar-fixed-bottom {
-    position: static;
+    /*position: static;*/
   }
   .navbar-fixed-top {
     margin-bottom: 18px;
